--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,16 @@
             "dont-discover": []
         }
     },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        },
+        "files": [
+            "app/helpers.php"
+        ]
+    },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
