--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.25",
+        "axios": "1.6.0",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
+        "lodash": "^4.17.21",
         "postcss": "^8.1.14",
         "resolve-url-loader": "5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "cross-env": "^7.0.3"
+        "cross-env": "^7.0.3",
+        "jquery": "^3.7.1",
+        "popper.js": "^1.16.1"
     }
 }
